[package]
name = "extol_sprite_layer"
version = "0.5.0"
edition = "2021"
authors = ["Ash <ext0l@catgirl.ai>"]
categories = [ "game-development" ]
description = "Explicitly-defined sprite layers for Bevy, including automatic y-sorting."
keywords = [ "gamedev", "bevy" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/deifactor/extol_sprite_layer"
exclude = [ "docs/*" ]

[features]
default = ["parallel_y_sort"]
parallel_y_sort = ["dep:rayon"]

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["bevy_render", "bevy_sprite"] }
itertools = "0.12.1"
ordered-float = "4.2.0"
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_sprite", "bevy_core_pipeline", "x11"] }
criterion = "0.4.0"
fastrand = "1.9.0"
tap = "1.0.1"

[[bench]]
name = "benchmark"
harness = false
